--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^5.16.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "remark-toc": "^9.0.0",
     "tailwindcss": "^4.1.14",
     "vite-plugin-svgr": "^4.5.0"
   },
