chore: add mise.toml for tool configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
     "typescript",
     "typescriptreact"
   ],
-  "cSpell.words": ["Grotesk", "shiki"]
+  "cSpell.words": ["Grotesk", "Ryze", "shiki"]
 }
