--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "astro": "^5.16.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "remark-toc": "^9.0.0",
     "tailwindcss": "^4.1.14",
     "vite-plugin-svgr": "^4.5.0"
   },
@@ -35,6 +34,7 @@
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "^0.7.1"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "remark-toc": "^9.0.0"
   }
 }
