--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "remark-toc": "^9.0.0"
+    "remark-toc": "^9.0.0",
+    "sharp": "^0.34.5"
   }
 }
